--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,10 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 :root {
+  --cream: #F6EEE0;
+  --peach: #E4B7A0;
+  --desert-sun: #A45C40;
+  --coral:#C38370;
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
@@ -24,13 +28,14 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #1abc9c;
-  --secondary: #2c3e50;
+  --primary: #A45C40;
+  --secondary: #C38370;
+  --tertiary: #E4B7A0;
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
   --danger: #dc3545;
-  --light: #f8f9fa;
+  --light:#E3E8E9;
   --dark: #343a40;
   --breakpoint-xs: 0;
   --breakpoint-sm: 576px;
@@ -159,12 +164,10 @@ sup {
 }
 
 a {
-  color: #1abc9c;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #117964;
   text-decoration: underline;
 }
 
@@ -360,13 +363,16 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  font-weight: 700;
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   line-height: 1.2;
 }
 
-h1, .h1 {
-  font-size: 2.5rem;
+h1, .h1{
+  font-size: 5rem;
+  font-weight: 300;
+  letter-spacing: 1px;
+  color: #000;
+  text-transform: capitalize;
 }
 
 h2, .h2 {
@@ -3913,11 +3919,10 @@ input[type=button].btn-block {
   text-decoration: none;
 }
 .nav-link.disabled {
-  color: #6c757d;
   pointer-events: none;
   cursor: default;
 }
-
+/* 
 .nav-tabs {
   border-bottom: 0.125rem solid #dee2e6;
 }
@@ -3947,16 +3952,16 @@ input[type=button].btn-block {
   margin-top: -0.125rem;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-}
+} */
 
-.nav-pills .nav-link {
+/* .nav-pills .nav-link {
   border-radius: 0.5rem;
 }
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
   background-color: #1abc9c;
-}
+} */
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3984,6 +3989,10 @@ input[type=button].btn-block {
   justify-content: space-between;
   padding: 0.5rem 1rem;
 }
+.navbar .container {
+  max-width: 1340px;
+}
+
 .navbar .container,
 .navbar .container-fluid,
 .navbar .container-sm,
@@ -4002,6 +4011,9 @@ input[type=button].btn-block {
   margin-right: 1rem;
   font-size: 1.25rem;
   line-height: inherit;
+  color: #000;
+  letter-spacing: 2px;
+  font-weight: 400;
   white-space: nowrap;
 }
 .navbar-brand:hover, .navbar-brand:focus {
@@ -4347,10 +4359,10 @@ input[type=button].btn-block {
   flex-direction: column;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #fff;
+  /* background-color: #fff;
   background-clip: border-box;
   border: 0.125rem solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.5rem;
+  border-radius: 0.5rem; */
 }
 .card > hr {
   margin-right: 0;
@@ -5045,8 +5057,8 @@ a.badge-dark:focus, a.badge-dark.focus {
   position: relative;
   display: block;
   padding: 0.75rem 1.25rem;
-  background-color: #fff;
-  border: 0.125rem solid rgba(0, 0, 0, 0.125);
+  /* background-color: #fff; */
+  /* border: 0.125rem solid rgba(0, 0, 0, 0.125); */
 }
 .list-group-item:first-child {
   border-top-left-radius: inherit;
@@ -6095,7 +6107,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #1abc9c !important;
+  background-color: #9DA993 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6105,7 +6117,7 @@ button.bg-primary:focus {
 }
 
 .bg-secondary {
-  background-color: #2c3e50 !important;
+  background-color: #E4B4B4 !important;
 }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
@@ -9999,7 +10011,7 @@ h3 {
   }
 }
 .page-section {
-  padding: 6rem 0;
+  padding: 3rem 0;
 }
 .page-section .page-section-heading {
   font-size: 2.25rem;
@@ -10071,16 +10083,13 @@ h3 {
   background-color: rgba(33, 37, 41, 0.5);
   line-height: 3.1rem;
 }
-
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 700;
 }
-#mainNav .navbar-brand {
-  color: #fff;
-}
+
 #mainNav .navbar-nav {
   margin-top: 1rem;
 }
@@ -10114,14 +10123,14 @@ h3 {
   #mainNav .navbar-nav {
     margin-top: 0;
   }
-  #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
-    color: #fff;
-    background: #1abc9c;
+  /* #mainNav .navbar-nav > li.nav-item > a.nav-link.active {
+    color: #fff !important;
+    background: #A45C40;
   }
   #mainNav .navbar-nav > li.nav-item > a.nav-link.active:active, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:focus, #mainNav .navbar-nav > li.nav-item > a.nav-link.active:hover {
-    color: #fff;
-    background: #1abc9c;
-  }
+    color: #fff !important;
+    background: #A45C40;
+  } */
 
   #mainNav.navbar-shrink {
     padding-top: 0.5rem;
@@ -10132,12 +10141,12 @@ h3 {
   }
 }
 .masthead {
-  padding-top: calc(6rem + 74px);
-  padding-bottom: 6rem;
+  padding-top: calc(5rem + 60px);
+  padding-bottom: 2rem;
 }
 .masthead .masthead-heading {
-  font-size: 2.75rem;
-  line-height: 2.75rem;
+  font-size: 2rem;
+  line-height: 3rem;
 }
 .masthead .masthead-subheading {
   font-size: 1.25rem;
@@ -10148,12 +10157,12 @@ h3 {
 
 @media (min-width: 992px) {
   .masthead {
-    padding-top: calc(6rem + 104px);
-    padding-bottom: 6rem;
+    padding-top: calc(5rem + 60px);
+    padding-bottom: 2rem;
   }
   .masthead .masthead-heading {
-    font-size: 4rem;
-    line-height: 3.5rem;
+    font-size: 2rem;
+    line-height: 3rem;
   }
   .masthead .masthead-subheading {
     font-size: 1.5rem;
@@ -10250,10 +10259,7 @@ form .row:first-child .floating-label-form-group {
 }
 
 .footer {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-color: #2c3e50;
-  color: #fff;
+  padding:0 0 50px 0;
 }
 
 .copyright {
