--- a/main.css
+++ b/main.css
@@ -1,35 +1,214 @@
-body {
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+
+  /* general styles */
+  .body {
     padding: 0;
     margin: 0;
-    background: #f2f6e9;
-  }
-  
-  /*--- navigation bar ---*/
-  
+    color: black;
+    background:#FFF;
+    font-family: 'Poppins', sans-serif !important;
+  }  
+
+  /* nav styles */
+
   .navbar {
-    background:#6ab446;
+    background-color: #fff;
+    border-bottom: 0.5px solid #000;
   }
-  
+
+  .navbar .container {
+    max-width: unset;
+  }
+
   .nav-link,
+  .nav-item a,
   .navbar-brand {
-    color: #fff;
-    cursor: pointer;
+    cursor: crosshair;
   }
   
-  .nav-link {
+  a.nav-link {
     margin-right: 1em !important;
+    font-weight: 300;
+    text-transform: capitalize;
+    letter-spacing: 1px;
+    color: #000 !important;
   }
-  
+
   .nav-link:hover {
     color: #000;
   }
+  .nav-link {
+    position: relative;
+    color: #000;
+    text-decoration: none;
+  }
   
+  .nav-link::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 10px;
+    left: 0;
+    background-color: #000;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out 0s;
+  }
+
+  .nav-link.skills::before {
+    bottom: -3px;
+  }
+
+  .nav-link.skills {
+    padding: 0;
+  }
+  
+  .nav-link:hover::before, .nav-link.active::before {
+    visibility: visible;
+    transform: scaleX(1);
+  }
+
   .navbar-collapse {
     justify-content: flex-end;
   }
-  .header {
-    background-image: url('images/header-background.jpg');
-    background-size: cover;
-    background-position: center;
-    position: relative;
+
+  .navbar-toggler {
+    letter-spacing: 1px;
   }
+
+  /* header styles */
+  .masthead {
+    position: relative;
+    max-width: 90%;
+    margin: 0 auto;
+    height: 95vh;
+  }
+
+  .masthead .text {
+    text-align: right;
+    z-index: 100;
+  }
+
+  .masthead-heading span {
+    color: #fff;
+    background-color: #C38370;
+    padding: 0 6px;
+    font-weight: 400;
+  }
+
+  .header-img {
+    height: 100%;
+    z-index:-1;
+    object-fit: cover;
+  }
+
+  /* about section */
+  .breakpoint-drop {
+    flex-direction: row;
+  }
+  #about {
+    background-color:#E4B7A0;
+  }
+
+  .portrait {
+    max-width: 500px;
+  }
+
+  .about-txt {
+    font-weight: 300;
+  }
+
+  a.nav-link.skills {
+    font-weight: 600;
+  }
+
+  /* .no-padding {
+    padding: 0 !important;
+  } */
+
+  @media(max-width:1195px) {
+    .breakpoint-drop {
+      flex-direction: column;
+    }
+    .portrait {
+      max-width: 90%;
+      margin: 20px;
+    }
+  }
+  
+  /* projects section */
+  .carousel-inner {
+    height: 100%;
+    background: yellow;
+  }
+  
+  .carousel .item {
+     -webkit-transition: 0.6s ease-in-out top;
+     -moz-transition: 0.6s ease-in-out top;
+     -ms-transition: 0.6s ease-in-out top;
+     -o-transition: 0.6s ease-in-out top;
+     transition: 0.6s ease-in-out top;
+  }
+  
+  .carousel .active {
+     top: 0;
+  }
+  
+  .carousel .next {
+     top: 400px;
+  }
+  
+  .carousel .prev {
+     top: -400px;
+  }
+  
+  .carousel .next.left,
+  .carousel .prev.right {
+     top: 0;
+  }
+  
+  .carousel .active.left {
+     top: -400px;
+  }
+  
+  .carousel .active.right {
+     top: 400px;
+  }
+  
+  .carousel .item {
+     left: 0;
+     border: 30px solid red;
+  }
+
+  .carousel-item img {
+    width: 40% !important;
+  }
+
+  .carousel-item-next.carousel-item-left,
+  .carousel-item-prev.carousel-item-right {
+  -webkit-transform: translate3d(0, 0, 0) !important;
+          transform: translate3d(0, 0, 0) !important;
+   }
+   .carousel-item-next,
+   .active.carousel-item-right {
+     -webkit-transform: translate3d(0, -100%, 0) !important;
+          transform: translate3d(0, -100%, 0) !important;
+   }
+   .carousel-item-prev,
+   .active.carousel-item-left {
+   -webkit-transform: translate3d(0, +100%, 0) !important;
+          transform: translate3d(0, +100, 0) !important;
+   }
+
+   /* footer */
+
+   .footer svg {
+     width: 25px;
+     height: 25px;
+     margin: 0 10px;
+   }
+
+   .footer a:hover {
+     text-decoration: none;
+   }
