--- a/css/styles.css
+++ b/css/styles.css
@@ -5848,7 +5848,8 @@ a.close.disabled {
 
 .carousel-inner {
   position: relative;
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
   overflow: hidden;
 }
 .carousel-inner::after {
@@ -5923,7 +5924,7 @@ a.close.disabled {
   align-items: center;
   justify-content: center;
   width: 15%;
-  color: #fff;
+  /* color: #fff; */
   text-align: center;
   opacity: 0.5;
   transition: opacity 0.15s ease;
@@ -5959,13 +5960,13 @@ a.close.disabled {
   background: no-repeat 50%/100% 100%;
 }
 
-.carousel-control-prev-icon {
+/* .carousel-control-prev-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
 }
 
 .carousel-control-next-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
-}
+} */
 
 .carousel-indicators {
   position: absolute;
@@ -5993,7 +5994,6 @@ a.close.disabled {
   background-clip: padding-box;
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
-  opacity: 0.5;
   transition: opacity 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
