--- a/main.css
+++ b/main.css
@@ -34,13 +34,14 @@
     color: #000 !important;
   }
 
-  .nav-link:hover {
-    color: #000;
-  }
   .nav-link {
     position: relative;
     color: #000;
     text-decoration: none;
+  }
+
+  .nav-link:hover {
+    color: #000;
   }
   
   .nav-link::before {
@@ -123,10 +124,6 @@
     font-weight: 600;
   }
 
-  /* .no-padding {
-    padding: 0 !important;
-  } */
-
   @media(max-width:1195px) {
     .breakpoint-drop {
       flex-direction: column;
@@ -138,68 +135,206 @@
   }
   
   /* projects section */
-  .carousel-inner {
-    height: 100%;
-    background: yellow;
+
+  /* general carousel styles */
+
+  .carousel.slide {
+    margin-bottom: 100px;
   }
-  
-  .carousel .item {
+
+  .carousel-item {
      -webkit-transition: 0.6s ease-in-out top;
      -moz-transition: 0.6s ease-in-out top;
      -ms-transition: 0.6s ease-in-out top;
      -o-transition: 0.6s ease-in-out top;
      transition: 0.6s ease-in-out top;
+     position: relative;
   }
-  
+
   .carousel .active {
-     top: 0;
+    top: 0;
   }
-  
+ 
   .carousel .next {
-     top: 400px;
+      top: 400px;
   }
-  
+ 
   .carousel .prev {
-     top: -400px;
+      top: -400px;
   }
-  
+ 
   .carousel .next.left,
   .carousel .prev.right {
-     top: 0;
+      top: 0;
   }
-  
+ 
   .carousel .active.left {
-     top: -400px;
+      top: -400px;
   }
-  
+ 
   .carousel .active.right {
-     top: 400px;
+      top: 400px;
   }
-  
-  .carousel .item {
-     left: 0;
-     border: 30px solid red;
+ /* general carousel styles */
+
+  /* slide counter */
+  .carousel-counter {
+    margin-top: 20px;
+  }
+
+  .carousel-counter span {
+    color: black;
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+
+  .carousel-counter span:after {
+    content: "";
+    position: absolute;
+    left: 44%;
+    background: #000;
+    width: 5%;
+    height: 1px;
+    top: 50%;
+  }
+
+  .carousel-counter span:before {
+    content: "";
+    position: absolute;
+    right: 44%;
+    background: #000;
+    width: 5%;
+    height: 1px;
+    top: 50%;
+  }
+  /* slide counter */
+
+  /* carousel chevrons */
+  .carousel-item-next.carousel-item-left,
+  .carousel-item-prev.carousel-item-right {
+    -webkit-transform: translate3d(0, 0, 0) !important;
+          transform: translate3d(0, 0, 0) !important;
+  }
+
+  .carousel-item-next,
+  .active.carousel-item-right {
+    -webkit-transform: translate3d(0, -100%, 0) !important;
+        transform: translate3d(0, -100%, 0) !important;
+  }
+  .carousel-item-prev,
+  .active.carousel-item-left {
+    -webkit-transform: translate3d(0, +100%, 0) !important;
+        transform: translate3d(0, +100, 0) !important;
+  }
+
+  .carousel-control-prev-icon, .carousel-control-next-icon {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-image: none;
+  }
+
+  .controls-container {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    left: 2%;
+    top: 50%;
+    width: 50px;
+    height: 50px;
+    transform: rotate(-270deg);
+  }
+  .carousel-control-next-icon:after {
+    content: '>';
+    font-size: 25px;
+    color: black;
+  }
+
+  .carousel-control-prev-icon:after {
+    content: '<';
+    font-size: 25px;
+    color: black;
+  }
+  /* carousel chevrons */
+
+  /* carousel content */
+  .carousel-content {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    margin: 30px 0 0 0;
+  }
+
+  .carousel-content a {
+    background: #A45C40;
+    transition: 0.5s;
+  }
+
+  .carousel-content a button {
+    color: #fff;
+  }
+
+  .carousel-content a:hover {
+    background-color:#C38370;
+  }
+
+  .carousel-content a:hover button {
+    color:#fff;
+  }
+
+  .carousel-item h1 {
+    font-weight: 400;
+    text-transform: none;
+  }
+
+  .image-container {
+    position: relative;
+  }
+
+  .image-container span {
+    position: absolute;
+    top: 50%;
+    transform: rotate(-90deg);
+    font-size: 14px;
+    text-transform: uppercase;
+    right: -120px;
+    color: #000;
   }
 
   .carousel-item img {
-    width: 40% !important;
+    width: 100% !important;
+    max-height: 550px;
+    object-fit: cover;
   }
 
-  .carousel-item-next.carousel-item-left,
-  .carousel-item-prev.carousel-item-right {
-  -webkit-transform: translate3d(0, 0, 0) !important;
-          transform: translate3d(0, 0, 0) !important;
-   }
-   .carousel-item-next,
-   .active.carousel-item-right {
-     -webkit-transform: translate3d(0, -100%, 0) !important;
-          transform: translate3d(0, -100%, 0) !important;
-   }
-   .carousel-item-prev,
-   .active.carousel-item-left {
-   -webkit-transform: translate3d(0, +100%, 0) !important;
-          transform: translate3d(0, +100, 0) !important;
-   }
+  @media(max-width:1180px) {
+    .carousel-content {
+      flex-direction: column;
+    }
+    .carousel-inner {
+      width: 100% !important;
+    }
+    .carousel-content a {
+      background-color:unset;
+      border:1px solid #000;
+      transition: 0.5s;
+    }
+    .carousel-content a button {
+      color: #000;
+    }
+    .carousel-content .carousel-text {
+      align-items: unset !important;
+    }
+    .controls-container {
+      right: 0;
+      top: 0;
+      left: unset;
+    }
+  }
+  /* carousel content */
+
 
    /* footer */
 
@@ -207,8 +342,23 @@
      width: 25px;
      height: 25px;
      margin: 0 10px;
+     transition: 0.5s;
    }
 
-   .footer a:hover {
+   .footer svg.margin-top {
+    margin-top: 4px !important;
+   }
+
+   .footer a:first-of-type:hover {
      text-decoration: none;
    }
+
+   .footer a:hover svg {
+    width: 30px;
+    height: 30px;
+    box-sizing: content-box;
+  }
+
+  /* footer */
+
+
