--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@
     background:#FFF;
     max-width: 1000px;
     margin: 0 auto;
-    font-family: 'Poppins', sans-serif !important;
+    font-family: 'Poppins', sans-serif;
   }  
 
   h1 {
@@ -24,6 +24,10 @@
     bottom: 5px;
     left: 0;
     height: 18px;
+  }
+
+  h3 {
+    font-family: 'Lora', serif !important;
   }
 
 
@@ -127,6 +131,94 @@
   .button:hover svg.down-arrow {
     transform: rotate(0deg);
   }
+
+  /* work */
+/* 
+  .card-section {
+    height:100vh;
+  } */
+
+  .cards {
+    display: flex;
+    justify-content:space-between;
+  }
+
+  .card {
+    width: 33%;
+    height: 350px;
+  }
+
+  .yellow {
+    background-color: #F8EA8C;
+  }
+
+  .blue {
+    background-color: #A4E8E0;
+  }
+
+  .card-body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+  }
+
+  .card-body:hover {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    transition: .5s ease;
+    background-color:#E1C340;
+    color: white;
+  }
+
+  .card svg {
+    width: 23rem;
+    height: 6rem;
+  }
+
+  .card-title {
+    font-weight: 500;
+    line-height: 2rem;
+    position: relative;
+    width: fit-content;
+  }
+
+  .card-title:before {
+    content: '';
+    background: #4CD7D0;
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+    bottom: -1px;
+    left: 0;
+    height: 6px;
+    transition: 0.3s;
+  }
+
+  .card-title:hover:before {
+    content: ">";
+    height: 100% !important;
+    text-align: center;
+    margin: 0 auto;
+    left: 80%;
+    font-size: 20px;
+    font-weight: 900;
+    background: unset;
+  }
+
+  .card-subtitle {
+    font-weight: 400;
+    color: grey;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+  }
+
+  /* work */
 
    /* footer */
 
