--- a/css/styles.css
+++ b/css/styles.css
@@ -387,6 +387,16 @@ h2, .h2 {
   line-height: 3rem;
 }
 
+@media (max-width:420px) {
+  h1 {
+    font-size: 4rem;
+  }
+  h2 {
+    font-size: 1.5rem;
+    line-height: 3rem;
+  }
+}
+
 h3, .h3 {
   font-size: 1.75rem;
 }
