--- a/main.css
+++ b/main.css
@@ -180,7 +180,8 @@
     .masthead {
       width: 90%;
       margin: 0 auto;
-      height: 70vh;
+      height: unset;
+      padding-top: 60px;
     }
   }
 
