--- a/css/styles.css
+++ b/css/styles.css
@@ -385,18 +385,23 @@ h2, .h2 {
   font-size: 2rem;
   font-weight: 400;
   line-height: 3rem;
-}
+}   
 
 @media (max-width:420px) {
   h1 {
+    white-space: nowrap;
     font-size: 4rem;
+    line-height: 5rem;
+  }
+  h1:before {
+    content: unset;
   }
   h2 {
     font-size: 1.5rem;
-    line-height: 3rem;
+    line-height: 2.5rem;
   }
-}
-
+} 
+  
 h3, .h3 {
   font-size: 1.75rem;
 }
@@ -411,7 +416,33 @@ h5, .h5 {
 
 h6, .h6 {
   font-size: 1rem;
+} 
+
+/* h1 {
+  font-size: 75px;
+  line-height: 95px;
 }
+
+h1:before {
+  content: '';
+  background: #4CD7D0;
+  width: 320px;
+  position: absolute;
+  z-index: -1;
+  bottom: -10px;
+  left: 0;
+  height: 18px;
+}
+
+p {
+  font-size: 16px;
+  line-height: 20px;
+}
+
+p.large-text {
+  font-size: 25px;
+  line-height: 40px;
+} */
 
 .lead {
   font-size: 1.25rem;
