--- a/main.css
+++ b/main.css
@@ -246,6 +246,10 @@
   /* work */
 
   /* instacart */
+
+  .sidebar ul {
+    list-style-type: none;
+  }
   .background-content span, .link {
     font-weight: 900;
   }
@@ -405,7 +409,7 @@
       padding: 60px 0 0 0;
     }
     .about-section.top {
-      padding-top: 60px !important;
+      padding-top: 30px !important;
     }
   }
 
@@ -430,6 +434,10 @@
     .card-title.work:before, h1:before {
       content:unset;
     }
+    .back-home svg {
+      height: 30px;
+      width: 30px;
+    }
   }
 
   @media(max-width:800px) {
@@ -437,7 +445,12 @@
       display:flex;
       justify-content: center;
       align-items: center;
-      margin: 20px 0;
+      margin:0 10px;
+      padding: 0 !important;
+    }
+    .portrait {
+      height: 100%;
+      width: 100%;
     }
     .colour-block {
       padding:10px;
