--- a/css/styles.css
+++ b/css/styles.css
@@ -367,13 +367,13 @@ template {
   display: none !important;
 }
 
-h1, h2, h3, h4, h5, h6,
+/*h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 0.5rem;
   line-height: 1.2;
 }
 
-h1, .h1{
+ h1, .h1{
   font-size: 5rem;
   line-height: 8rem;
   letter-spacing: 1px;
@@ -416,7 +416,7 @@ h5, .h5 {
 
 h6, .h6 {
   font-size: 1rem;
-} 
+}  */
 
 /* h1 {
   font-size: 75px;
